# rusty_rest

./: .gitignore  Cargo.toml  Dockerfile  README.md
entity/: Cargo.toml
entity/src/: lib.rs  mod.rs  post.rs  prelude.rs
infrastructure/: Cargo.toml
infrastructure/src/: config.rs  errors.rs  lib.rs
infrastructure/src/database/: connect.rs
infrastructure/src/s3/: mod.rs
migration/src/: m20220101_000001_create_table.rs
src/: config.rs  connect.rs  errors.rs  factory.rs  lib.rs  main.rs  router.rs  routes.rs  worker.rs
src/apis/: health_check.rs  mod.rs
src/apis/controllers/: post.rs
src/apis/dtos/: post.rs
src/apis/handlers/post/: get_post.rs  mod.rs
src/apis/repositories/: post.rs
src/apis/routes/: mod.rs
src/application/: app.rs  router.rs
src/connect/: mongodb.rs  redis.rs
src/controllers/: health_check.rs
src/core/application/: mod.rs
src/core/application/controllers/: health_check.rs
src/core/application/handlers/: mod.rs
src/core/application/routes/: mod.rs
src/core/infrastructure/: mod.rs
src/core/infrastructure/database/: mod.rs
src/core/infrastructure/database/repositories/: mod.rs
src/core/infrastructure/redis/: mod.rs
src/core/security/: jwt.rs  mod.rs  password.rs
src/domains/post/controllers/: post.rs
src/domains/post/dtos/: post.rs
src/domains/post/handlers/post/: get_post.rs  mod.rs
src/domains/post/repositories/: post.rs
src/domains/post/routes/: mod.rs
src/dtos/: health_check.rs
src/helpers/: health_check.rs
src/middlewares/: authentication.rs  cors.rs  mod.rs  response.rs
src/orm/: mod.rs  mongo_orm.rs  redis_orm.rs
src/repositories/: health_check.rs
src/schema/: health_check.rs
src/tasks/: health_check.rs
