[package]
name = "rusty_rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
# serde_json is just for the example, not required in general
serde_json = "1.0"
dotenv = "0.15.0"
log = "0.4.14"
env_logger = "0.9.0"
futures-util = "0.3"
mongodb = "2.6.0"
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
tokio = { version = "1", features = ["full"] }
chrono = "0.4" # Used for setting DateTimes
lazy_static = "1.4.0"
redis = { version = "0.23.1", features = [ "cluster", "tokio-comp"] }
thiserror = "1.0"


