[workspace]
members = [".", "entity", "migration"]

[package]
name = "rusty_rest"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
# internal dependencies
entity = { path = "entity" }
migration = { path = "migration" }

# external dependencies
actix-web = "4.5.1"
serde = "1.0.196"
serde_json = "1.0"
dotenv = "0.15.0"
log = "0.4.20"
env_logger = "0.11.1"
futures-util = "0.3.30"
redis = { version = "0.23.1", features = [ "cluster", "tokio-comp"] }
thiserror = "1.0.56"
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
validator = { version = "0.16", features = ["derive"] }
