[workspace]
members = [".", "entity", "migration"]

[package]
name = "rusty_rest"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

# [lib]
# name = "rust_lib"          # The name of the target.
# path = "src/lib/mod.rs"    # The source file of the target.

[dependencies]
# internal dependencies
entity = { path = "entity" }
migration = { path = "migration" }

# external dependencies
actix-web = "4.5.1"
serde = "1.0.196"
serde_json = "1.0"
dotenv = "0.15.0"
log = "0.4.20"
env_logger = "0.11.1"
futures-util = "0.3.30"
redis = { version = "0.24.0", features = ["tokio-comp"] }
thiserror = "1.0.56"
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
validator = { version = "0.16", features = ["derive"] }
celery = "0.5.5"
tokio = "1.36.0"
structopt = "0.3.26"
utoipa = { version = "4.2.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "7", features = ["actix-web"] }
lazy_static = "1.4.0"
bcrypt = "0.15"
jsonwebtoken = "9"