[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.196"
serde_json = "1.0"
dotenv = "0.15.0"
log = "0.4.20"
env_logger = "0.11.1"
futures-util = "0.3.30"
redis = { version = "0.24.0", features = ["tokio-comp"] }
thiserror = "1.0.56"
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
validator = { version = "0.16", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
lazy_static = "1.4.0"
bcrypt = "0.15"
jsonwebtoken = "9"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.41.0"
aws-smithy-types = "1.2.0"